feat: two way binding added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </div>
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="./js/materialize/js/materialize.js"></script>
-<script src="./js/materialize/js/init.js"></script>
+<script src="./js/materialize/materialize.js"></script>
+<script src="./js/materialize/init.js"></script>
 
 <script src="./js/router.js"></script>
 <script src="./js/app.js"></script>
