minified version added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script src="./js/materialize/materialize.js"></script>
 <script src="./js/materialize/init.js"></script>
 
-<script src="./js/router.js"></script>
+<script src="./js/breezy.js"></script>
 <script src="./js/app.js"></script>
 </body>
 
