--- a/index.html
+++ b/index.html
@@ -4,29 +4,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Vivek Kumar" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="./css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link href="./css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  
-  <title>IncSPA</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+
+  <title>Breezy</title>
 </head>
 
 <body>
+  <!--Header-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a href="#home" class="nav-link">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="#about" class="nav-link">About</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!--header ends-->
 
+  <!-- App-- your routes will show here-->
   <div id="app">
     Loading...
   </div>
-<!--  Scripts-->
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="./js/materialize/materialize.js"></script>
-<script src="./js/materialize/init.js"></script>
+  <!--app ends-->
 
-<script src="./js/breezy.js"></script>
-<script src="./js/app.js"></script>
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+  <script src="./js/router.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
