--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
 
-  <title>Breezy</title>
+  <title>iBreezy.js</title>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-  <script src="./js/breezy.js"></script>
+  <script src="./js/iBreezy.js"></script>
   <script src="./js/app.js"></script>
 </body>
 
